# GuidedLDA

./: .gitignore  AUTHORS  ChangeLog  MANIFEST.in  Makefile  README.rst  build_dist.sh  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
examples/: example_seeded_lda.py
guidedlda/: __init__.py  _guidedlda.c  datasets.py  guidedlda.py  utils.py
guidedlda/tests/: nyt.titles  nyt.tokens  test_datasets.py  test_guidedlda_nyt.py  test_lda.py  test_lda_reuters.py  test_lda_sparse.py  test_lda_transform.py  test_utils.py
