[metadata]
name = guidedlda
summary = Topic modeling with Guided latent Dirichlet allocation
description-file =
    README.rst
author = Vikash Singh (vi3k6i5)
author-email = vikash.duliajan@gmail.com
version = 2.0
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix

[options]
install_requires = 
    numpy

[files]
packages = guidedlda

[extension=guidedlda._guidedlda]
sources =
    guidedlda/_guidedlda.c
    guidedlda/gamma.c

[sdist]
pre-hook.sdist_pre_hook = guidedlda._setup_hooks.sdist_pre_hook

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html